--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "observable-types",
-  "version": "0.1.0-rc11",
+  "version": "0.1.0",
   "type": "module",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -35,6 +35,6 @@
   },
   "peerDependencies": {
     "rxjs": ">=6.0.0",
-    "rimmel": ">=1.1.1"
+    "rimmel": "^1.2.0"
   }
 }
