--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "declaration": true,
     "declarationDir": "./dist/types",
     "noEmit": true,
+    "noEmitHelpers": true,
+    "importHelpers": false
   },
-  "include": ["rollup.config.ts"],
+  "include": ["rollup.config.ts"]
 }
