--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "moduleResolution": "node",
-    "lib": [ "ESNext", "DOM", "DOM.Iterable" ],
+    "lib": [ "DOM", "DOM.Iterable", "DOM.AsyncIterable", "ESNext" ],
     "module": "ESNext",
     "target": "ESNext",
     "types": [ "node", "jest" ],
