--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.base",
   "compilerOptions": {
-    "target": "esnext",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.AsyncIterable", "DOM.Iterable", "ESNext"],
     "declaration": true,
     "declarationDir": "./dist/types",
     "noEmit": true,
