--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "serve": "vite preview"
   },
   "files": [
-    "dist/",
-    "favicon.svg"
+    "dist/"
   ],
   "stackblitz": {
     "startCommand": "vite"
@@ -38,7 +37,7 @@
     "vite": "^5.2.9"
   },
   "peerDependencies": {
-    "rxjs": ">=5.5.0 || >=6.0.0 || >=7.0.0",
+    "rxjs": ">=5.5.0 || >=6.0.0 || >=7.8.1",
     "rimmel": "^1.2.2"
   },
   "license": "MIT"
